push to base branch

--- a/.github/workflows/pull-request-to-developer.yml
+++ b/.github/workflows/pull-request-to-developer.yml
@@ -1,4 +1,4 @@
-name: Pull request from a branch to developer/QA/UAT/production
+name: Pull request from any branch to developer/QA/UAT/production
 run-name: ${{ github.actor }} is performing a pull request
 on:
   pull_request:
