--- a/.github/workflows/push-to-base-branch.yml
+++ b/.github/workflows/push-to-base-branch.yml
@@ -15,7 +15,7 @@ jobs:
           fetch-depth: 0
       - name: Extract branch name
         shell: bash
-        run: echo running on branch ${GITHUB_REF##*/}
+        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
         id: extract_branch
       #We need to install NPM so that we can install SFDX CLI tools
       - name: Install NPM
