--- a/.github/workflows/push-to-base-branch.yml
+++ b/.github/workflows/push-to-base-branch.yml
@@ -17,6 +17,9 @@ jobs:
         shell: bash
         run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
         id: extract_branch
+      - name: print branch name
+        shell: bash
+        run: echo "${{ steps.extract_branch.outputs.branch }}"
       #We need to install NPM so that we can install SFDX CLI tools
       - name: Install NPM
         run: |
