--- a/.github/workflows/pull-request-to-developer.yml
+++ b/.github/workflows/pull-request-to-developer.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: ${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}
+    environment: production
     steps:
       # Checkout the Source cod from the latest commit
       - uses: actions/checkout@v3
