--- a/.github/workflows/merge-request-to-developer.yml
+++ b/.github/workflows/merge-request-to-developer.yml
@@ -1,9 +1,9 @@
-name: Pull request from any branch to developer
-run-name: ${{ github.actor }} is performing a pull request
+name: merge request from any branch to developer
+run-name: ${{ github.actor }} is performing a merge request
 on:
   pull_request:
     types:
-      - opened
+      - closed
     branches:
       - developer
   
