--- a/.github/workflows/push-to-base-branch.yml
+++ b/.github/workflows/push-to-base-branch.yml
@@ -13,13 +13,13 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Extract branch name
-        shell: bash
-        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
-        id: extract_branch
-      - name: print branch name
-        shell: bash
-        run: echo "${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}"
+    #   - name: Extract branch name
+    #     shell: bash
+    #     run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+    #     id: extract_branch
+    #   - name: print branch name
+    #     shell: bash
+    #     run: echo "${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}"
       #We need to install NPM so that we can install SFDX CLI tools
       - name: Install NPM
         run: |
